<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPage">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="298dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/signin_text"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="298dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:onClick="signInToHome"
        android:text="@string/sign_in_button"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAllCaps="false"
        app:backgroundTint="#99DDFF"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_marginBottom="95dp"
        android:onClick="signInToRegister"
        android:text="@string/register_button"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAllCaps="false"
        app:backgroundTint="#99DDFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>