<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="createNotifButton"
        android:text="@string/create_notif_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#99DDFF"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintWidth_percent="0.6"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="viewCalendarButton"
        android:text="@string/view_calendar_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#99DDFF"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintWidth_percent="0.6"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="viewMedicationListButton"
        android:text="@string/view_meds_list_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#99DDFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintWidth_percent="0.6"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:onClick="accountSettingsButton"
        android:text="@string/account_settings_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#99DDFF"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintWidth_percent="0.6"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="pill"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline"

        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/purba_red_and_white_pill" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="88dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.1"
        app:srcCompat="@drawable/android_calendar_small" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/gear" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/clock" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>